<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_baseline_tune_24"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/device_info"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_rate_app"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/rate_app"
        app:showAsAction="never" />

    <item
        android:id="@+id/licenses"
        android:icon="@drawable/ic_baseline_copyright_24"
        android:title="@string/about_license_title"
        app:showAsAction="never" />

</menu>